@@ -14,9 +14,6 @@ _, E.wowbuild = GetBuildInfo(); E.wowbuild = tonumber(E.wowbuild);
 E.noop = function() end;
 E.screenheight = tonumber(string.match(({GetScreenResolutions()})[GetCurrentResolution()], "%d+x(%d+)"));
 E.screenwidth = tonumber(string.match(({GetScreenResolutions()})[GetCurrentResolution()], "(%d+)x+%d"));
-E.MinimapSize = 175
-E.RBRWidth = ((E.MinimapSize - 6) / 6) + 4
-E.ValColor = '|cff1784d1' -- DEPRECIATED SOON, REMEMBER TO REMOVE THIS AND CODE AROUND IT
 E.TexCoords = {.08, .92, .08, .92}
 
 E['valueColorUpdateFuncs'] = {};
